[tool.poetry]
name = "helldiver"
version = "0.1.0"
description = "A lightweight markdown to blog-aware HTML converter."
authors = ["Rohan Bansal <rohanarunbansal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
